# TestWebSocket

./: CMakeLists.txt  MainForm.qml  README.md  main.cpp  main.qml  qml.qrc  ws_server.cpp  ws_server.h
conf/: FileTest  FileTestInstance  GUIBkp_read.txt  backup.txt  backup_read.txt  echoclient.html  json_doc_rx.txt  tstNestedList4.html
qml/: CustomerModel.qml  History.qml  Notes.qml  Settings.qml  SettingsForm.qml  SettingsList.qml  SettingsListForm.qml
